updates to the notebook

--- a/notebooks/CNV_cytogenetic_scale.ipynb
+++ b/notebooks/CNV_cytogenetic_scale.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pysam\n",
-    "import xarray as xr\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import time"
    ]
   },
   {
@@ -49,17 +50,85 @@
     "        qname = read.qname\n",
     "        if qname in pairs:\n",
     "            if read.is_read1:\n",
-    "                yield read, pairs[qname]\n",
-    "                del[qname]\n",
+    "                yield read, pairs.pop(qname)\n",
     "            elif read.is_read2:\n",
-    "                yield pairs[qname], read\n",
-    "                del[qname]\n",
+    "                yield pairs.pop(qname), read\n",
     "        else:\n",
     "            pairs[qname] = read\n",
-    "            if read.is_read1:\n",
-    "                pairs[qname] = read\n",
-    "            elif read.is_read2:\n",
-    "                pairs[qname] = read"
+    "\n",
+    "\n",
+    "def generate_bins(bam_header, bin_size):\n",
+    "    for ref in bam_header.references:\n",
+    "        ref_len = bam_header.get_reference_length(ref)\n",
+    "        bin_bounds = [\n",
+    "            (i, i + bin_size)\n",
+    "            for i in range(0, ref_len, bin_size)\n",
+    "        ]\n",
+    "        if bin_bounds[-1][1] != ref_len:\n",
+    "            bin_bounds.append((bin_bounds[-1][1], ref_len))\n",
+    "        yield ref, bin_bounds\n",
+    "\n",
+    "\n",
+    "def first(it):\n",
+    "    i = iter(it)\n",
+    "    try:\n",
+    "        return next(i)\n",
+    "    except StopIteration:\n",
+    "        raise Exception(f'Expected at least one item, got {it}')\n",
+    "\n",
+    "\n",
+    "def head(it, n=5):\n",
+    "    for i, val in enumerate(it, 1):\n",
+    "        if i > n:\n",
+    "            break\n",
+    "        yield val\n",
+    "\n",
+    "\n",
+    "def one(it):\n",
+    "    i = iter(it)\n",
+    "    err_msg = f'Expected one item, got {it}'\n",
+    "    try:\n",
+    "        ret_val = next(i)\n",
+    "    except StopIteration:\n",
+    "        raise Exception(err_msg)\n",
+    "    try:\n",
+    "        next(i)\n",
+    "    except StopIteration:\n",
+    "        return ret_val\n",
+    "    raise Exception(err_msg)\n",
+    "\n",
+    "\n",
+    "def count_reads(bam_filename, binsize):\n",
+    "    with pysam.AlignmentFile(bam_filename) as bam:\n",
+    "        bins = dict(generate_bins(bam.header, binsize))\n",
+    "        counts = {\n",
+    "            contig: np.zeros(len(bins[contig]), dtype=np.uint64)\n",
+    "            for contig in bins\n",
+    "        }\n",
+    "        rcg = gen_read_pairs(filter_reads(bam, include=2, exclude=1804))\n",
+    "        f_read, r_read = sorted(next(rcg), key=lambda read: read.is_reverse)\n",
+    "        start, stop = f_read.pos, r_read.reference_end\n",
+    "        # always pick first bin\n",
+    "        curr_bin = start // 50_000\n",
+    "        # proper pair reads, no need to validate\n",
+    "        curr_contig = bam.get_reference_name(f_read.reference_id)\n",
+    "        count = counts[curr_contig][curr_bin]\n",
+    "\n",
+    "        for read_pair in rcg:\n",
+    "            # TODO: same as above\n",
+    "            f_read, r_read = sorted(read_pair, key=lambda read: read.is_reverse)\n",
+    "            start, stop = f_read.pos, r_read.reference_end\n",
+    "            count_bin = start // 50_000\n",
+    "            count_contig = bam.get_reference_name(f_read.reference_id)\n",
+    "\n",
+    "            if count_bin != curr_bin or count_contig != curr_contig:\n",
+    "                counts[curr_contig][curr_bin] = count\n",
+    "                count = counts[count_contig][count_bin]\n",
+    "                curr_bin = count_bin\n",
+    "                curr_contig = count_contig\n",
+    "            count += 1\n",
+    "\n",
+    "        return counts"
    ]
   },
   {
@@ -70,13 +139,64 @@
    "source": [
     "in_bam = (\n",
     "    '../../data/ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/data/'\n",
-    "    'HG00096/alignment/HG00096.mapped.ILLUMINA.bwa.GBR.low_coverage.20120522.bam')\n",
+    "    'HG00096/alignment/HG00096.mapped.ILLUMINA.bwa.GBR.low_coverage.20120522.bam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with pysam.AlignmentFile(in_bam) as bam:\n",
+    "#     for r1, r2 in gen_read_pairs(filter_reads(bam, include=2, exclude=1804)):\n",
+    "#         pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.bar(list(bins.keys()), np.array([len(bins[contig]) for contig in bins]))\n",
+    "# plt.xticks(rotation=90)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def first(it):\n",
+    "    i = iter(it)\n",
+    "    try:\n",
+    "        return next(i)\n",
+    "    except StopIteration:\n",
+    "        raise Exception(f'Expected at least one item, got {it}')\n",
     "\n",
-    "with pysam.AlignmentFile(in_bam) as bam:\n",
-    "    print(bam.references)\n",
-    "    header = bam.header\n",
-    "    for read1, read2 in gen_read_pairs(filter_reads(bam, include=2, exclude=1804)):\n",
-    "        break"
+    "\n",
+    "def head(it, n=5):\n",
+    "    for i, val in enumerate(it, 1):\n",
+    "        if i > n:\n",
+    "            break\n",
+    "        yield val\n",
+    "\n",
+    "\n",
+    "def one(it):\n",
+    "    i = iter(it)\n",
+    "    err_msg = f'Expected one item, got {it}'\n",
+    "    try:\n",
+    "        ret_val = next(i)\n",
+    "    except StopIteration:\n",
+    "        raise Exception(err_msg)\n",
+    "    try:\n",
+    "        next(i)\n",
+    "    except StopIteration:\n",
+    "        return ret_val\n",
+    "    raise Exception(err_msg)"
    ]
   },
   {
@@ -85,16 +205,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_bins(bam_header, bin_size):\n",
-    "    for ref in bam_header.references:\n",
-    "        ref_len = bam_header.get_reference_length(ref)\n",
-    "        bin_bounds = [\n",
-    "            (i, i + bin_size)\n",
-    "            for i in range(0, ref_len, bin_size)\n",
-    "        ]\n",
-    "        if bin_bounds[-1][1] != ref_len:\n",
-    "            bin_bounds.append((bin_bounds[-1][1], ref_len))\n",
-    "        yield ref, bin_bounds"
+    "start_time = time.time()\n",
+    "readcounts = count_reads(in_bam, 50_000)\n",
+    "end_time = time.time()\n",
+    "print(f'time in seconds: {end_time - start_time}')"
    ]
   },
   {
@@ -103,147 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_index(bins):\n",
-    "    refs, starts, stops = [], [], []\n",
-    "    for ref, bounds in bins:\n",
-    "        for start, stop in bounds:\n",
-    "            refs.append(ref)\n",
-    "            starts.append(start)\n",
-    "            stops.append(stop)\n",
-    "    return {\n",
-    "        'contig': refs,\n",
-    "        'start': starts,\n",
-    "        'stop': stops\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = make_index(generate_bins(header, 50_000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bins = dict(generate_bins(header, 50_000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lengths = xr.DataArray([len(bins[contig]) for contig in bins], coords=idx, dims=list(idx.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.bar(list(bins.keys()), lengths.data)\n",
-    "plt.xticks(rotation=90)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(*read1.to_string().split('\\t')[:9], sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(*read2.to_string().split('\\t')[:9], sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def count_reads(bam, binsize):\n",
-    "    with pysam.AlignmentFile(in_bam) as bam:\n",
-    "        for read_pair in gen_read_pairs(filter_reads(bam, include=2, exclude=1804)):\n",
-    "            f_read, r_read = sorted(read_pair, key=lambda read: read.is_reverse)\n",
-    "#             f_read, r_read = read_pair\n",
-    "            yield f_read, r_read"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cri = count_reads(in_bam, 50_000)\n",
-    "counts = np.zeros(len(bins['1']), dtype=np.uint64)\n",
-    "count = 0\n",
-    "curr_bin = 0\n",
-    "for read1, read2 in cri:\n",
-    "    start, stop = read1.pos, read2.reference_end\n",
-    "    # if spanning, pick first bin\n",
-    "    _bin = sorted({start // 50_000, stop // 50_000})[0]\n",
-    "    if _bin != curr_bin:\n",
-    "        counts[_bin] = count\n",
-    "        count = 0\n",
-    "        curr_bin = _bin\n",
-    "    count += 1\n",
-    "    if read1.rname != 0:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counts.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read1.pos // 50_000"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read2.reference_end - read1.pos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read1.pos + read1.tlen"
+    "counts = readcounts['1']"
    ]
   },
   {
@@ -262,7 +236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "for contig, counts in readcounts.items():\n",
+    "#     plt.plot(counts / counts.sum(), 'C0.', alpha=.4)\n",
+    "    normed_counts = counts / counts.sum()\n",
+    "    baseline = normed_counts.mean()\n",
+    "    ax = plt.subplot()\n",
+    "    ax.plot(normed_counts, 'C0.', alpha=.4)\n",
+    "    ax.plot(-(baseline - normed_counts), 'r', alpha=.4)\n",
+    "    ax.set_title(contig)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -270,37 +252,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# df = pd.DataFrame([(contig, start, stop) for contig in bins for start, stop in bins[contig] if contig == '1'], columns=['contig', 'start', 'stop'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "xr.DataArray(counts, [('intervals', list(df.index))])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xr.DataArray(counts, [('intervals', [(contig, start, stop) for contig in bins for start, stop in bins[contig] if contig == '1'])])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(counts / counts.sum(), 'C0.', alpha=.4)\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -341,84 +300,6 @@
     "plt.axvline(normed_counts.mean(), c='r')\n",
     "plt.axvline(np.median(normed_counts), c='y')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = xr.Dataset(\n",
-    "    coords=dict(\n",
-    "        pos=list(range(len(counts))),\n",
-    "        sample=['HG00096'],\n",
-    "    ),\n",
-    "    data_vars=dict(\n",
-    "        contig=('pos', np.array(contigs, dtype=np.str)),\n",
-    "        start=('pos', np.array(starts, dtype=np.uint32)),\n",
-    "        end=('pos', np.array(ends, dtype=np.uint32)),\n",
-    "        depth=(\n",
-    "            ('pos', 'sample'),\n",
-    "            np.array([counts], dtype=np.uint64).transpose()),\n",
-    "    )\n",
-    ")\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.append()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bins['1'][-3:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_bins(bam_header, bin_size):\n",
-    "    starts, stops, contigs = [], [], []\n",
-    "    for ref in bam_header.references:\n",
-    "        ref_len = bam_header.get_reference_length(ref)\n",
-    "        start = np.arange(0, ref_len, bin_size)\n",
-    "        stop = np.append(np.arange(bin_size, ref_len, bin_size), ref_len)\n",
-    "        contig = np.array([ref] * start.shape[0])\n",
-    "        starts.append(start)\n",
-    "        stops.append(stops)\n",
-    "        contigs.append(contig)\n",
-    "    return np.hstack(contigs), np.hstack(starts), np.hstack(stops)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# generate_bins(header, 50_000)"
    ]
   }
  ],
