move notebook to loading cached data

--- a/notebooks/CNV_cytogenetic_scale.ipynb
+++ b/notebooks/CNV_cytogenetic_scale.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pysam\n",
+    "from pathlib import Path\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import time"
+    "import numpy as np"
    ]
   },
   {
@@ -18,15 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = [8, 4]\n",
     "plt.rcParams['font.size'] = 12"
    ]
@@ -37,98 +29,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def filter_reads(bam, include=0, exclude=0):\n",
-    "    for read in bam:\n",
-    "        flag = read.flag\n",
-    "        if flag & include == include and flag & exclude == 0:\n",
-    "            yield read\n",
-    "\n",
-    "\n",
-    "def gen_read_pairs(bam):\n",
-    "    pairs = dict()\n",
-    "    for read in bam:\n",
-    "        qname = read.qname\n",
-    "        if qname in pairs:\n",
-    "            if read.is_read1:\n",
-    "                yield read, pairs.pop(qname)\n",
-    "            elif read.is_read2:\n",
-    "                yield pairs.pop(qname), read\n",
-    "        else:\n",
-    "            pairs[qname] = read\n",
-    "\n",
-    "\n",
-    "def generate_bins(bam_header, bin_size):\n",
-    "    for ref in bam_header.references:\n",
-    "        ref_len = bam_header.get_reference_length(ref)\n",
-    "        bin_bounds = [\n",
-    "            (i, i + bin_size)\n",
-    "            for i in range(0, ref_len, bin_size)\n",
-    "        ]\n",
-    "        if bin_bounds[-1][1] != ref_len:\n",
-    "            bin_bounds.append((bin_bounds[-1][1], ref_len))\n",
-    "        yield ref, bin_bounds\n",
-    "\n",
-    "\n",
-    "def first(it):\n",
-    "    i = iter(it)\n",
-    "    try:\n",
-    "        return next(i)\n",
-    "    except StopIteration:\n",
-    "        raise Exception(f'Expected at least one item, got {it}')\n",
-    "\n",
-    "\n",
-    "def head(it, n=5):\n",
-    "    for i, val in enumerate(it, 1):\n",
-    "        if i > n:\n",
-    "            break\n",
-    "        yield val\n",
-    "\n",
-    "\n",
-    "def one(it):\n",
-    "    i = iter(it)\n",
-    "    err_msg = f'Expected one item, got {it}'\n",
-    "    try:\n",
-    "        ret_val = next(i)\n",
-    "    except StopIteration:\n",
-    "        raise Exception(err_msg)\n",
-    "    try:\n",
-    "        next(i)\n",
-    "    except StopIteration:\n",
-    "        return ret_val\n",
-    "    raise Exception(err_msg)\n",
-    "\n",
-    "\n",
-    "def count_reads(bam_filename, binsize):\n",
-    "    with pysam.AlignmentFile(bam_filename) as bam:\n",
-    "        bins = dict(generate_bins(bam.header, binsize))\n",
-    "        counts = {\n",
-    "            contig: np.zeros(len(bins[contig]), dtype=np.uint64)\n",
-    "            for contig in bins\n",
-    "        }\n",
-    "        rcg = gen_read_pairs(filter_reads(bam, include=2, exclude=1804))\n",
-    "        f_read, r_read = sorted(next(rcg), key=lambda read: read.is_reverse)\n",
-    "        start, stop = f_read.pos, r_read.reference_end\n",
-    "        # always pick first bin\n",
-    "        curr_bin = start // 50_000\n",
-    "        # proper pair reads, no need to validate\n",
-    "        curr_contig = bam.get_reference_name(f_read.reference_id)\n",
-    "        count = counts[curr_contig][curr_bin]\n",
-    "\n",
-    "        for read_pair in rcg:\n",
-    "            # TODO: same as above\n",
-    "            f_read, r_read = sorted(read_pair, key=lambda read: read.is_reverse)\n",
-    "            start, stop = f_read.pos, r_read.reference_end\n",
-    "            count_bin = start // 50_000\n",
-    "            count_contig = bam.get_reference_name(f_read.reference_id)\n",
-    "\n",
-    "            if count_bin != curr_bin or count_contig != curr_contig:\n",
-    "                counts[curr_contig][curr_bin] = count\n",
-    "                count = counts[count_contig][count_bin]\n",
-    "                curr_bin = count_bin\n",
-    "                curr_contig = count_contig\n",
-    "            count += 1\n",
-    "\n",
-    "        return counts"
+    "WF_OUT = '~/analysis/1000kg_cnv/workflow-out'\n",
+    "SAMPLES = {\n",
+    "    'HG00261': ['1_000', '10_000', '50_000', '25_000'],\n",
+    "    'HG00096': ['1_000', '50_000', '25_000', '10_000'],\n",
+    "}"
    ]
   },
   {
@@ -137,9 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "in_bam = (\n",
-    "    '../../data/ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/data/'\n",
-    "    'HG00096/alignment/HG00096.mapped.ILLUMINA.bwa.GBR.low_coverage.20120522.bam')"
+    "sample_bam_map = { \n",
+    "    'HG00261': '/usr/home/lkirk/data/ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/data/HG00261/alignment/HG00261.mapped.ILLUMINA.bwa.GBR.low_coverage.20130415.bam',\n",
+    "    'HG00096': '/usr/home/lkirk/data/ftp.1000genomes.ebi.ac.uk/vol1/ftp/phase3/data/HG00096/alignment/HG00096.mapped.ILLUMINA.bwa.GBR.low_coverage.20120522.bam' \n",
+    "} "
    ]
   },
   {
@@ -148,9 +54,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with pysam.AlignmentFile(in_bam) as bam:\n",
-    "#     for r1, r2 in gen_read_pairs(filter_reads(bam, include=2, exclude=1804)):\n",
-    "#         pass"
+    "def get_counts_path(workflow_dir, sample_id, bin_size, must_exist=True):\n",
+    "    counts_path = Path(workflow_dir).expanduser() / sample_id / bin_size / 'readcounts.npz'\n",
+    "    if counts_path.exists():\n",
+    "        return counts_path\n",
+    "    else:\n",
+    "        if must_exist:\n",
+    "            raise Exception(f'{counts_path} does not exist')\n",
+    "\n",
+    "\n",
+    "def read_counts(wf_dir, sample_id, bin_size):\n",
+    "    counts_path = get_counts_path(wf_dir, sample_id, bin_size)\n",
+    "    return np.load(counts_path, allow_pickle=False)"
    ]
   },
   {
@@ -163,103 +78,6 @@
     "# plt.xticks(rotation=90)\n",
     "# plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def first(it):\n",
-    "    i = iter(it)\n",
-    "    try:\n",
-    "        return next(i)\n",
-    "    except StopIteration:\n",
-    "        raise Exception(f'Expected at least one item, got {it}')\n",
-    "\n",
-    "\n",
-    "def head(it, n=5):\n",
-    "    for i, val in enumerate(it, 1):\n",
-    "        if i > n:\n",
-    "            break\n",
-    "        yield val\n",
-    "\n",
-    "\n",
-    "def one(it):\n",
-    "    i = iter(it)\n",
-    "    err_msg = f'Expected one item, got {it}'\n",
-    "    try:\n",
-    "        ret_val = next(i)\n",
-    "    except StopIteration:\n",
-    "        raise Exception(err_msg)\n",
-    "    try:\n",
-    "        next(i)\n",
-    "    except StopIteration:\n",
-    "        return ret_val\n",
-    "    raise Exception(err_msg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "readcounts = count_reads(in_bam, 50_000)\n",
-    "end_time = time.time()\n",
-    "print(f'time in seconds: {end_time - start_time}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "counts = readcounts['1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(counts, bins=100)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for contig, counts in readcounts.items():\n",
-    "#     plt.plot(counts / counts.sum(), 'C0.', alpha=.4)\n",
-    "    normed_counts = counts / counts.sum()\n",
-    "    baseline = normed_counts.mean()\n",
-    "    ax = plt.subplot()\n",
-    "    ax.plot(normed_counts, 'C0.', alpha=.4)\n",
-    "    ax.plot(-(baseline - normed_counts), 'r', alpha=.4)\n",
-    "    ax.set_title(contig)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -278,7 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normed_counts = counts / counts.sum()"
+    "# plt.hist(normed_counts, bins=100)\n",
+    "# plt.axvline(normed_counts.mean(), c='r')\n",
+    "# plt.axvline(np.median(normed_counts), c='y')\n",
+    "# plt.show()"
    ]
   },
   {
@@ -287,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normed_counts.mean()"
+    "readcounts = read_counts(WF_OUT, 'HG00096', '10_000')"
    ]
   },
   {
@@ -296,10 +117,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(normed_counts, bins=100)\n",
-    "plt.axvline(normed_counts.mean(), c='r')\n",
-    "plt.axvline(np.median(normed_counts), c='y')\n",
+    "CHROMOSOMES = list(map(str, range(1, 22 + 1))) + ['X', 'Y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int(len(CHROMOSOMES) / 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(int(len(CHROMOSOMES) / 3), 3, figsize=(8 * 3, 4 * 8))\n",
+    "axes = axes.flatten()\n",
+    "for i, contig in enumerate(CHROMOSOMES):\n",
+    "    counts = readcounts[contig]\n",
+    "    normed_counts = counts / counts.sum()\n",
+    "    baseline = normed_counts.mean()\n",
+    "#     ax = plt.subplot()\n",
+    "    ax = axes[i]\n",
+    "    ax.plot(normed_counts, 'C0.', alpha=.4)\n",
+    "    ax.plot(-(baseline - normed_counts), 'r', alpha=.4)\n",
+    "    ax.set_title(contig)\n",
+    "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from bio.countreads import generate_bins\n",
+    "# bins = {contig: dict(zip(('start', 'stop'), np.array(coord).T))\n",
+    "#         for contig, coord in generate_bins(in_bam, 50_000)}\n",
+    "# def get_region_mask(contig, start, stop):\n",
+    "#     contig_bins = bins[contig]\n",
+    "#     return (contig_bins['start'] > start) & (contig_bins['stop'] <= stop)"
    ]
   }
  ],
@@ -323,5 +185,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
